# HiMe

./: .gitignore  README.md  debug_client.py  env.example.sh  extractor.py  index.html  main.py  prompt_loader.py  pyproject.toml  script.js  serve.py  styles.css
VL_Memory/: 010-intro.tex  020-relate-v2.tex  020-relate.tex  030-method-v2.tex  030-method.tex  040-exp.tex  appendix.tex  appendix_v2.tex  copyfile.tex  example_paper.bib  main.tex  main_old.tex
agent/: conversation_planner.py  multitag_planner.py  observer.py  planner.py
client/: base_vlm_client.py  observer_vlm.py  planner_vlm.py
flat_memory/: README.md  app.py  app_no_memory.py  flat_memory_client.py
infer/: loop.py
memer/: app.py  app_no_memory.py  memer_client.py
memory/: encoder.py  multitag_recorder.py  recorder.py
prompt/: README.md  memer_task3_v2_aligned.txt  multitag_planner.txt  multitag_planner_no_delete.txt  multitag_planner_no_image.txt  multitag_planner_no_memory.txt  multitag_planner_no_plan_no_memory.txt  multitag_planner_no_reasoning.txt  multitag_planner_no_text.txt  multitag_planner_query_create_only.txt  multitag_planner_single_subtask.txt  observer.txt  planner.txt  task1.txt  task1_obs.txt  task2.txt  task2_obs.txt  task3.txt  task3_FIFO.txt  task3_fifo.txt  task3_hime_wo_sentry.txt  task3_memer.txt  task3_no_delete_update.txt  task3_no_image.txt  task3_no_management.txt  task3_no_memory.txt  task3_no_memory_no_observer.txt  task3_no_observer.txt  task3_no_text.txt  task3_obs.txt  task3_only_image.txt  task3_only_text.txt  task3_transient_memory.txt  task3_v2.txt  (+2 more)
(+42 files in other folders)
